# CppCMakeTemplate

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  testreport.xml
demoapp/: CMakeLists.txt  demoapp.cpp
demolib/: CMakeLists.txt  demolib.cpp
demolib/cmake/: demolibConfig.cmake  demolibVersion.h.in
demolib/include/demolib/: demolib.h  demolibVersion.h
test/: CMakeLists.txt  test.cpp
